--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "class-validator": "^0.13.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "inversify-express-utils": "^6.3.2",
     "jwt-then": "^1.0.1",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.33",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jwt-then": "^1.0.0",
     "@types/validator": "^13.1.3"
