--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "inversify": "^5.1.1",
     "inversify-express-utils": "^6.3.2",
     "jwt-then": "^1.0.1",
+    "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
